feat(permission-center): complete phase3 permission kernel